--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.datasource.url=jdbc:mysql://mysql.pedaweb.univ-amu.fr:3306/b20031399
+spring.datasource.username=b20031399
+spring.datasource.password=X4hLYQwJPNYk0uz
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+server.port=8080
