add api services and payloads

--- a/userService/pom.xml
+++ b/userService/pom.xml
@@ -65,6 +65,11 @@
             <artifactId>android-json</artifactId>
             <version>0.0.20131108.vaadin1</version>
         </dependency>
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <scope>runtime</scope>
+        </dependency>
 
     </dependencies>
 
