--- a/userService/src/main/resources/application.properties
+++ b/userService/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/testdb
+spring.datasource.url=jdbc:mariadb://localhost:3306/userService
 spring.datasource.username=root
-spring.datasource.password=@Aayman1
+spring.datasource.password=supersecret
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 server.port=8080
 
 server.error.include-message=always
