--- a/userService/pom.xml
+++ b/userService/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>projetUrbanisationBackend</artifactId>
+    <artifactId>userService</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>projetUrbanisationBackend</name>
-    <description>projetUrbanisationBackend</description>
+    <name>userService</name>
+    <description>userService</description>
     <properties>
         <java.version>11</java.version>
         <spring-security.version>5.3.4.RELEASE</spring-security.version>
